crates/ralph-tui/tests/snapshots/integration_snapshots__search_case_insensitive.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: snapshot
---
iteration: 0
current_view: 0
total_iterations: 1
following_latest: true
has_alert: false
alert_iteration: ~
search_query: error
search_matches: 3
search_current_match: 0
pending_hat: —
show_help: false
