crates/ralph-tui/tests/snapshots/integration_snapshots__search_cleared.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.capture_state()
---
iteration: 0
current_view: 0
total_iterations: 1
following_latest: true
has_alert: false
alert_iteration: ~
search_query: ~
search_matches: 0
search_current_match: 0
pending_hat: —
show_help: false
